@startuml Plataforma_Educativa

!theme plain
skinparam linetype ortho
skinparam dpi 300
skinparam ranksep 80
skinparam nodesep 100
skinparam padding 2

' Definición de entidades
entity "users" as users {
  *id : bigserial
  --
  usernick : varchar(255) UNIQUE
}

entity "cursos" as cursos {
  *id : bigserial
  --
  nombre : varchar(255)
  descripcion : text
  profesor_id : bigint
  codigo : varchar(255) UNIQUE
  estado : varchar(255)
  fecha_inicio : date
  fecha_fin : date
  capacidad_maxima : integer
  created_at : timestamp
  updated_at : timestamp
}

entity "contenidos" as contenidos {
  *id : bigserial
  --
  titulo : varchar(255)
  descripcion : text
  fecha_creacion : date
  fecha_limite : date
  creador_id : bigint
  curso_id : bigint
  tipo : varchar(255)
  estado : varchar(255)
  created_at : timestamp
  updated_at : timestamp
}

entity "evaluaciones" as evaluaciones {
  *id : bigserial
  --
  contenido_id : bigint
  tipo_evaluacion : varchar(255)
  puntuacion_total : integer
  tiempo_limite : integer
  calificacion_automatica : boolean
  mostrar_respuestas : boolean
  permite_reintento : boolean
  max_reintentos : integer
  created_at : timestamp
  updated_at : timestamp
}

entity "calificaciones" as calificaciones {
  *id : bigserial
  --
  trabajo_id : bigint
  puntaje : double precision
  comentario : text
  fecha_calificacion : timestamp
  evaluador_id : bigint
  criterios_evaluacion : json
  created_at : timestamp
  updated_at : timestamp
}

entity "materiales_apoyo" as materiales_apoyo {
  *id : bigserial
  --
  titulo : varchar(255)
  tipo : varchar(255)
  url : varchar(255)
  descripcion : text
  nivel_dificultad : integer
  conceptos_relacionados : json
  activo : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "carreras" as carreras {
  *id : bigserial
  --
  nombre : varchar(255)
  descripcion : text
  nivel_educativo : varchar(255)
  duracion_anos : double precision
  areas_conocimiento : json
  perfil_ideal : json
  oportunidades_laborales : json
  activo : boolean
  created_at : timestamp
  updated_at : timestamp
}

' Relaciones principales
cursos ||--o{ contenidos : "tiene"
contenidos ||--o{ evaluaciones : "tiene"
evaluaciones ||--o{ calificaciones : "tiene"
users ||--o{ calificaciones : "evalúa"
users ||--o{ cursos : "imparte"
carreras ||--o{ "recomendaciones_carrera" : "tiene"

' Relaciones N:M
users }o--o{ cursos : "inscrito en"
contenidos }o--o{ "recursos" : "contiene"

note "Diagrama generado desde script SQL" as N1

@enduml